crates/bevy_naga_oil/src/compose/tests/invalid_identifiers/const.wgsl
#define_import_path consts

const fine: f32 = 1.0;
const bad_: f32 = 1.0;